# Chorus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  Makefile  ROADMAP.md  TODOS.md  build.rs  check_impl  dev.sh
.context/: codex-session-id
.context/retros/: 2026-04-17-1.json
.github/ISSUE_TEMPLATE/: architecture_investigation.yml  bug_report.yml  product_design_request.yml
.github/workflows/: ci.yml  release.yml
.hooks/: pre-commit
_old/src/: agentProcessManager.ts  chat-bridge.ts  connection.ts
bench/decision-trigger/: BASELINE.md  README.md  cases-hard.tsv  cases.tsv  models.tsv  run-matrix.sh  run.sh
crates/stub-agent/: Cargo.toml
crates/stub-agent/src/: main.rs
docs/: ACP.md  ACP_DRIVER_SOP.md  ADR.md  AGENT_LIFECYCLE.md  BACKEND.md  BRIDGE.md  BRIDGE_MIGRATION.md  CLI.md  DECISIONS.md  DESIGN.md  DEV.md  DOMAIN_MULTI_STREAM_ARCHITECTURE.md  DOMAIN_MULTI_STREAM_MIGRATION_PLAN.md  DRIVERS.md  DRIVER_GUIDE.md  INBOX.md  KNOWLEDGE.md  RUNTIME_MCP_SUPPORT.md  workspace.md
docs/adr/: README.md
docs/conventions/: README.md  backend.md  design.md  general.md
docs/extensions/: README.md
docs/mechanisms/: README.md
docs/operations/: README.md  development.md
docs/plan/: bridge-platform-protocol.md  collapse-dual-runtime-path.md  dev-auth-and-bridge-onboarding.md  identity-and-auth-redesign.md  identity-unification-plan.md
docs/plans/: 2026-03-24-channel-edit-delete-design.md  2026-03-27-im-event-push-architecture-design.md  2026-03-27-im-event-push-architecture-implementation-plan.md  2026-03-29-channel-scoped-threads-tab-design.md  2026-03-31-shadcn-adoption.md  (+7 more)
qa/: BUG_FIX_REPORT_TEMPLATE.md  QA_CASES.md  QA_PLAN_TEMPLATE.md  QA_PRESETS.md  QA_REPORT_TEMPLATE.md  README.md
src/: activity_log.rs  agent_manager.rs  bridge.rs  config.rs  index.ts  lib.rs  logging.rs  main.rs  models.rs  server.rs  store.rs
tests/: agent_cli_tests.rs  agent_lifecycle_process_state_test.rs  agent_manager_process_state_test.rs  agent_session_persistence_tests.rs  agent_status_derivation_tests.rs  auth_qa_tests.rs  bridge_serve_tests.rs  bridge_ws_tests.rs  channel_cli_tests.rs  check_impl.rs  dev_auth_tests.rs  devices_tests.rs  driver_tests.rs  e2e_tests.rs  live_multi_session_tests.rs  live_runtime_tests.rs  local_session_tests.rs  realtime_tests.rs  realtime_transport_tests.rs  server_tests.rs  store_tests.rs  workspace_cli_tests.rs
ui/: components.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+504 files in other folders)
