[package]
name = "chorus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chorus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
rusqlite = { version = "0.34", features = ["bundled"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1"
urlencoding = "2"
tower-http = { version = "0.6", features = ["fs", "cors"] }
regex = "1"
futures-util = "0.3"
dialoguer = { version = "0.11", default-features = false }
console = "0.15"
open = "5"
rust-embed = { version = "8", features = ["mime-guess"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
tokio-tungstenite = "0.28"
